# 2-cub3D

./: CMakeLists.txt  Makefile  README.md  check_cell.c  check_colors_validity.c  check_map_validity.c  check_path_validity.c  check_resolution_validity.c  cub3d.c  cub3d.h  delete.c  main.c  make_cub.c  make_game.c  make_image.c  make_structure.c  map.cub  map2.cub  parsing.c  print_map.c  read_file.c  utils.c
game/: draw_textures.c  make_cub.c  make_game.c  make_image.c  make_screenshot.c  make_sprite.c  make_walls.c  moves.c  what_colour.c
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  (+6 more)
parsing/: check_cell.c  check_colors_validity.c  check_diag.c  check_map_validity.c  check_path_validity.c  check_resolution_validity.c  parsing.c
textures/: coin.xpm
